--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "flightradarapi": "^1.3.31"
+    "canvas": "^2.11.2",
+    "d3": "^7.9.0",
+    "d3-geo": "^3.1.1",
+    "flightradarapi": "^1.3.31",
+    "geojson": "^0.5.0",
+    "topojson-client": "^3.1.0"
   }
 }
