--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "canvas": "^2.11.2",
     "d3": "^7.9.0",
+    "d3-dsv": "^3.0.1",
     "d3-geo": "^3.1.1",
     "flightradarapi": "^1.3.31",
     "geojson": "^0.5.0",
